// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Icons/SearchIcon should render the search icon 1`] = `
"

<svg
  xmlns="http://www.w3.org/2000/svg"
  width="20"
  height="20"
  class="DocSearch-Search-Icon"
  viewBox="0 0 32 32"
>
  <path
    d="M14.386 14.386l4.0877 4.0877-4.0877-4.0877c-2.9418 2.9419-7.7115 2.9419-10.6533 0-2.9419-2.9418-2.9419-7.7115 0-10.6533 2.9418-2.9419 7.7115-2.9419 10.6533 0 2.9419 2.9418 2.9419 7.7115 0 10.6533z"
    stroke="#000"
    fill="none"
    fill-rule="evenodd"
    stroke-linecap="round"
    stroke-linejoin="round"
  ></path></svg
>;
"
`;

exports[`components/Icons/SearchIcon should render the search icon with a className 1`] = `
"

<svg
  xmlns="http://www.w3.org/2000/svg"
  width="20"
  height="20"
  class="search"
  viewBox="0 0 32 32"
>
  <path
    d="M14.386 14.386l4.0877 4.0877-4.0877-4.0877c-2.9418 2.9419-7.7115 2.9419-10.6533 0-2.9419-2.9418-2.9419-7.7115 0-10.6533 2.9418-2.9419 7.7115-2.9419 10.6533 0 2.9419 2.9418 2.9419 7.7115 0 10.6533z"
    stroke="#000"
    fill="none"
    fill-rule="evenodd"
    stroke-linecap="round"
    stroke-linejoin="round"
  ></path></svg
>;
"
`;
